Add create account method
